--- a/_dev/Makefile
+++ b/_dev/Makefile
@@ -8,13 +8,13 @@ GOROOT/.ok:
 	cp -r "$(shell go env GOROOT)/pkg/tool" GOROOT/pkg/tool
 	rm -r GOROOT/src/crypto/tls
 	ln -s ../../../.. GOROOT/src/crypto/tls
-	@echo 'GOROOT="$(PWD)/GOROOT"'
+	@echo 'GOROOT="$(CURDIR)/GOROOT"'
 	@touch "$@"
 
 bin:
 	mkdir -p "$@"
 
-bin/tris-publicserver: bin tris-publicserver/* GOROOT/.ok
-	GOROOT="$(PWD)/GOROOT" go build -i -v -o "$@" ./tris-publicserver
-bin/tris-localserver: bin tris-localserver/* GOROOT/.ok
-	go build -i -v -o "$@" ./tris-localserver
+bin/tris-publicserver: bin tris-publicserver/* ../*.go GOROOT/.ok
+	GOROOT="$(CURDIR)/GOROOT" go build -i -v -o "$@" ./tris-publicserver
+bin/tris-localserver: bin tris-localserver/* ../*.go GOROOT/.ok
+	GOROOT="$(CURDIR)/GOROOT" go build -i -v -o "$@" ./tris-localserver
