Remove stale crypto/tls in GOROOT at every build

--- a/_dev/Makefile
+++ b/_dev/Makefile
@@ -1,5 +1,9 @@
 all: bin/tris-publicserver bin/tris-localserver
 
+.PHONY: GOROOT
+GOROOT: GOROOT/.ok
+	@rm -f GOROOT/pkg/*/crypto/tls.a
+
 GOROOT/.ok:
 	rm -rf GOROOT
 	mkdir -p GOROOT/pkg
@@ -8,13 +12,12 @@ GOROOT/.ok:
 	cp -r "$(shell go env GOROOT)/pkg/tool" GOROOT/pkg/tool
 	rm -r GOROOT/src/crypto/tls
 	ln -s ../../../.. GOROOT/src/crypto/tls
-	@echo 'GOROOT="$(CURDIR)/GOROOT"'
 	@touch "$@"
 
 bin:
 	mkdir -p "$@"
 
-bin/tris-publicserver: bin tris-publicserver/* ../*.go GOROOT/.ok
+bin/tris-publicserver: bin tris-publicserver/* ../*.go GOROOT
 	GOROOT="$(CURDIR)/GOROOT" go build -i -v -o "$@" ./tris-publicserver
-bin/tris-localserver: bin tris-localserver/* ../*.go GOROOT/.ok
+bin/tris-localserver: bin tris-localserver/* ../*.go GOROOT
 	GOROOT="$(CURDIR)/GOROOT" go build -i -v -o "$@" ./tris-localserver
