Detect go version and os changes and rebuild GOROOT

--- a/_dev/Makefile
+++ b/_dev/Makefile
@@ -1,10 +1,12 @@
 all: bin/tris-publicserver bin/tris-localserver
 
+GOROOTINFO := $(shell go version | cut -d' ' -f 3)_$(shell go env GOOS)_$(shell go env GOARCH)
+
 .PHONY: GOROOT
-GOROOT: GOROOT/.ok
+GOROOT: GOROOT/.ok_$(GOROOTINFO)
 	@rm -f GOROOT/pkg/*/crypto/tls.a
 
-GOROOT/.ok:
+GOROOT/.ok_$(GOROOTINFO):
 	rm -rf GOROOT
 	mkdir -p GOROOT/pkg
 	cp -r "$(shell go env GOROOT)/src" GOROOT/src
