Build caddy container from the working directory

--- a/_dev/tris-localserver/Dockerfile
+++ b/_dev/tris-localserver/Dockerfile
@@ -1,7 +1,7 @@
 FROM scratch
 
 # ( cd _dev/tris-localserver && GOOS=linux ../go.sh build -v -i . &&
-# docker build -t tris-localserver . && docker run --rm --name tris-localserver tris-localserver )
+# docker build -t tris-localserver . && docker run -i --env TLSDEBUG=keys -p 4444:443 --rm tris-localserver )
 
 # go run ../../generate_cert.go -host localhost -duration 87600h
 ADD key.pem ./
@@ -9,6 +9,8 @@ ADD cert.pem ./
 
 # GOOS=linux ../go.sh build -v -i .
 ADD tris-localserver ./
+
+ENV TLSDEBUG error
 
 EXPOSE 443
 
